Change blog title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Fullstack developer blog</h1>
+      <h1 class="mr-2">Web developer blog</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -43,9 +43,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p>
         Welcome to my blog! Here I will be sharing my thoughts and experiences
-        about web, backend and cloud development. The plan is to write a post
-        whenever I solve a problem that I want to remember, or when I learn
-        something new. I hope you find something useful here.
+        about web development. The plan is to write a post whenever I solve a
+        problem that I want to remember, or when I learn something new. I hope
+        you find something useful here.
       </p>
       {
         // only display if at least one social link is enabled
