--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,10 +42,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Welcome to my blog! Here I will be sharing my thoughts and experiences
-        about web development. The plan is to write a post whenever I solve a
-        problem that I want to remember, or when I learn something new. I hope
-        you find something useful here.
+        Welcome to my blog! Here, I will be sharing my thoughts and experiences
+        about web development. My plan is to write a post whenever I solve a
+        problem that I want to remember or learn something new. I hope you find
+        something useful here. These days, I mostly work with React and Next.js,
+        so expect content related to those technologies.
       </p>
       {
         // only display if at least one social link is enabled
