--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Web developer blog</h1>
+      <h1 class="mr-2">Web Developer Blog</h1>
       <a
         target="_blank"
         href="/rss.xml"
