--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -4,6 +4,7 @@ import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import Layout from "./Layout.astro";
+import BuyMeACoffee from "@components/BuyMeACoffee";
 
 export interface Props {
   frontmatter: {
@@ -24,5 +25,9 @@ const { frontmatter } = Astro.props;
       <slot />
     </section>
   </main>
+  <div class="flex flex-row items-center justify-center gap-4">
+    If you would like to support my work, you can
+    <BuyMeACoffee client:load />
+  </div>
   <Footer />
 </Layout>
