--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -25,7 +25,7 @@ const { frontmatter } = Astro.props;
       <slot />
     </section>
   </main>
-  <div class="flex flex-row items-center justify-center gap-4">
+  <div class="mb-8 flex flex-row items-center justify-center gap-4">
     If you would like to support my work, you can
     <BuyMeACoffee client:load />
   </div>
