--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,10 +44,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p>
         Welcome to my blog! Here, I will be sharing my thoughts and experiences
-        about web development. My plan is to write a post whenever I solve a
-        problem that I want to remember or learn something new. I hope you find
-        something useful here. These days, I mostly work with React and Next.js,
-        so expect content related to those technologies.
+        about web development. I write posts whenever I solve a problem that I
+        want to remember or learn something new. I hope you find something
+        useful here. These days, I mostly work with React and Next.js, so expect
+        content related to those technologies.
       </p>
       <div class="flex flex-row items-center gap-4">
         If you would like to support my work, you can
