--- a/src/components/ShareLinks.astro
+++ b/src/components/ShareLinks.astro
@@ -16,8 +16,8 @@ const shareLinks = [
     linkTitle: `Share this post on Facebook`,
   },
   {
-    name: "Twitter",
-    href: "https://twitter.com/intent/tweet?url=",
+    name: "X",
+    href: "https://x.com/intent/tweet?url=",
     linkTitle: `Tweet this post`,
   },
   {
