--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -100,7 +100,7 @@ const layoutProps = {
       <ShareLinks />
     </div>
   </main>
-  <div class="mb-8 flex flex-row items-center justify-center gap-4">
+  <div class="mb-8 flex flex-col items-center justify-center gap-4 sm:flex-row">
     If you would like to support my work, you can
     <BuyMeACoffee client:load />
   </div>
