--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         useful here. These days, I mostly work with React and Next.js, so expect
         content related to those technologies.
       </p>
-      <div class="flex flex-col items-center gap-4 sm:flex-row">
+      <div
+        class="flex flex-col items-center gap-4 text-center sm:flex-row sm:text-start"
+      >
         If you would like to support my work, you can
         <BuyMeACoffee client:load />
       </div>
