--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,11 +43,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Welcome to my blog! Here, I will be sharing my thoughts and experiences
-        about web development. I write posts whenever I solve a problem that I
-        want to remember or learn something new. I hope you find something
-        useful here. These days, I mostly work with React and Next.js, so expect
-        content related to those technologies.
+        Welcome to my blog! Here, I share my thoughts and experiences about web
+        development. I write posts whenever I solve a problem that I want to
+        remember, or when learn something new. These days, I mostly work with
+        React and Next.js, so expect content related to those technologies. I
+        hope you find something useful here.
       </p>
       <div
         class="flex flex-col items-center gap-4 text-center sm:flex-row sm:text-start"
