--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -130,7 +130,7 @@ const { activeNav } = Astro.props;
 </header>
 
 <!-- React Certification Side Banners -->
-<div class="react-side-banner react-side-banner-left">
+<!-- <div class="react-side-banner react-side-banner-left">
   <a
     href="https://certificates.dev/react"
     target="_blank"
@@ -160,7 +160,7 @@ const { activeNav } = Astro.props;
       class="side-banner-image"
     />
   </a>
-</div>
+</div> -->
 
 <style>
   #skip-to-content {
