--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
-import CertVisual from "../components/CertVisual";
+import CertVisual from "../components/CertVisual.astro";
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -110,13 +110,12 @@ const socialImageURL = new URL(
       )
     }
 
-    <CertVisual client:load />
-
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
+    <CertVisual />
     <slot />
   </body>
 </html>
