--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
 import CertVisual from "../components/CertVisual.tsx";
+import Analytics from "@vercel/analytics/astro";
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -117,5 +118,6 @@ const socialImageURL = new URL(
   <body>
     <CertVisual client:load />
     <slot />
+    <Analytics />
   </body>
 </html>
