--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,6 +97,11 @@ const socialImageURL = new URL(
       rel="stylesheet"
     />
 
+    <!-- Preload Certificate Images -->
+    <link rel="preload" as="image" href="/assets/cert1.svg" />
+    <link rel="preload" as="image" href="/assets/cert2.svg" />
+    <link rel="preload" as="image" href="/assets/cert3.svg" />
+
     <meta name="theme-color" content="" />
 
     {
