Add async script for banner and div for react-free-weekend-banner

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -119,8 +119,13 @@ const socialImageURL = new URL(
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
+    <script
+      is:inline
+      src="https://media.bitterbrains.com/main.js?from=AURORA&type=top"
+      async></script>
   </head>
   <body>
+    <div id="react-free-weekend-banner"></div>
     <CertVisual client:load />
     <slot />
     <Analytics />
