--- a/src/pages/speaking.astro
+++ b/src/pages/speaking.astro
@@ -20,6 +20,22 @@ const upcomingEvents = sortedEvents
 <Layout title={`Speaking | ${SITE.title}`}>
   <Header activeNav="speaking" />
   <Main pageTitle="Speaking" pageDesc="My speaking appearances.">
+    <a
+      target="_blank"
+      href="/speaking.xml"
+      class="rss-link"
+      aria-label="rss feed"
+      title="RSS Feed"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
+        ><path
+          d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
+        ></path><path
+          d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
+        ></path><circle cx="6" cy="18" r="2"></circle>
+      </svg>
+      <span class="sr-only">RSS Feed</span>
+    </a>
     <div id="featured">
       <h2>Upcoming</h2>
       <ul>
@@ -38,6 +54,12 @@ const upcomingEvents = sortedEvents
 </Layout>
 
 <style>
+  .rss-link {
+    @apply mb-6;
+  }
+  .rss-icon {
+    @apply mb-2 h-6 w-6 scale-110 fill-skin-accent sm:mb-3 sm:scale-125;
+  }
   #featured {
     @apply pb-3 pt-6;
   }
